<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>aldebaran</artifactId>
  <build>
    <plugins>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>${org.mapstruct.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>

      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
          <layers>
            <enabled>true</enabled>
          </layers>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>build-info</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.springframework.boot</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <!--suppress UnresolvedMavenProperty -->
          <argLine>-javaagent:${org.mockito:mockito-core:jar} -Xshare:off</argLine>
          <includes>
            <include>**/*IT.java</include>
          </includes>
          <reuseForks>false</reuseForks>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>properties</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <!--suppress UnresolvedMavenProperty -->
          <argLine>-javaagent:${org.mockito:mockito-core:jar} -Xshare:off</argLine>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>

    </plugins>
  </build>


  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-webmvc</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-redis</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-cache</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-opentelemetry</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>opentelemetry-logback-appender-1.0</artifactId>
      <groupId>io.opentelemetry.instrumentation</groupId>
      <version>2.25.0-alpha</version>
    </dependency>

    <dependency>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>${springdoc.version}</version>
    </dependency>

    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>${org.mapstruct.version}</version>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-flyway</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>flyway-database-postgresql</artifactId>
      <groupId>org.flywaydb</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-webmvc-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-testcontainers</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>testcontainers-postgresql</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
    </dependency>

  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>testcontainers-bom</artifactId>
        <groupId>org.testcontainers</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>2.0.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <description>Aldebaran Training Service (Workouts and Performance)</description>
  <groupId>apex.stellar</groupId>
  <modelVersion>4.0.0</modelVersion>

  <name>aldebaran-training</name>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>4.0.3</version>
  </parent>

  <properties>
    <java.version>25</java.version>
    <org.mapstruct.version>1.6.3</org.mapstruct.version>
    <springdoc.version>3.0.1</springdoc.version>
  </properties>

  <version>1.0.0</version>

</project>